--- a/index.css
+++ b/index.css
@@ -32,18 +32,77 @@ body {
 .btn {
   padding-left: 1rem;
   padding-right: 1rem;
+  font-size: 14px;
+  font-weight: 600;
+  border: none;
 }
 .btn-login {
   padding: 0.5rem 2rem;
   color: #2873f0;
-  font-size: 14px;
-  font-weight: 600;
+  border-radius: 3px;
 }
 .btn-more,
 .btn-cart {
   background-color: transparent;
   border: none;
   color: white;
-  font-size: 14px;
-  font-weight: 600;
+}
+.categories {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  background-color: aliceblue;
+  box-shadow: 0 1px 1px 0 rgb(0 0 0 / 16%);
+  padding-bottom: 1rem;
+  padding: 1rem 4rem 1rem 4rem;
+}
+.category {
+  text-align: center;
+}
+.head img {
+  height: 75px;
+}
+.dotd {
+  margin: 1rem 4rem 1rem 4rem;
+  box-shadow: 0 2px 4px 0 rgb(0 0 0/16%);
+}
+.dotd-header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 1rem;
+}
+.heading {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.btn-view {
+  background-color: #2874f0;
+  padding: 1rem;
+  color: white;
+  border-radius: 5px;
+}
+.dotd-items {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+}
+.item .body p {
+  padding: 0.4rem;
+}
+.txt {
+  font-weight: 400;
+}
+.offer {
+  color: green;
+}
+.tag {
+  font-size: 12px;
+  color: grey;
 }
