--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ body {
   height: 3rem;
   background-color: #2874f0;
   display: flex;
-  flex-direction: row;
+  /*flex-direction: row;*/
   align-items: center;
   justify-content: space-evenly;
 }
@@ -63,11 +63,19 @@ body {
 .head img {
   height: 75px;
 }
+.ad {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
 .dotd {
-  margin: 1rem 4rem 1rem 4rem;
+  /*margin: 1rem 4rem 1rem 4rem;*/
   box-shadow: 0 2px 4px 0 rgb(0 0 0/16%);
 }
-.dotd-header {
+.dotd-header,
+.header {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -85,12 +93,14 @@ body {
   color: white;
   border-radius: 5px;
 }
-.dotd-items {
+
+.dotd-items,
+.items {
   display: flex;
   flex-direction: row;
   text-align: center;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 1rem;
 }
 .item .body p {
@@ -105,4 +115,20 @@ body {
 .tag {
   font-size: 12px;
   color: grey;
+}
+.new-ad {
+  box-shadow: 0 2px 4px 0 rgb(0 0 0/16%);
+}
+.books-music {
+  margin: 1rem;
+  box-shadow: 0 2px 4px 0 rgb(0 0 0/16%);
+}
+.heading1 {
+  display: flex;
+  flex-direction: column;
+}
+.text {
+  color: grey;
+  font-size: 12px;
+  padding-top: 0.3rem;
 }
