--- a/index1.css
+++ b/index1.css
@@ -11,11 +11,14 @@ header h1 {
 div > p {
   color: brown;
 }
+#Listfriends {
+  list-style-type: circle;
+}
 p.myquote {
   font-weight: 900;
 }
 p::first-letter {
-  font-size: 1.5rem;
+  font-size: 2em;
 }
 li:nth-last-of-type(2) {
   color: chocolate;
@@ -33,4 +36,46 @@ li:nth-last-of-type(2) {
 .position1 img {
   position: relative;
   left: -70px;
+}
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+.img {
+  order: 2;
+}
+.size {
+  font-size: 20px;
+}
+.size1 {
+  font-size: 1rem;
+}
+.size2 {
+  font-size: 2em;
+}
+.grid {
+  display: grid;
+  height: 400px;
+  background-color: skyblue;
+  grid-template-columns: repeat(4, 2fr);
+  grid-template-rows: 100px 100px;
+  /* grid-template-columns: auto auto auto auto; */
+  align-content: start;
+  grid-gap: 10px;
+}
+.grid-item {
+  /* border-collapse: collapse; */
+  border: 1px solid black;
+}
+.item2 {
+  grid-row: 1/3;
+  /* shorthand for grid row start and end */
+}
+.item3 {
+  grid-column: 1 / span 4;
+  /* if weare spanning one column for whole block */
+}
+.item4 {
+  grid-area: 1/2/3/4;
 }
