--- a/index.css
+++ b/index.css
@@ -11,7 +11,6 @@ body {
   height: 3rem;
   background-color: #2874f0;
   display: flex;
-  /*flex-direction: row;*/
   align-items: center;
   justify-content: space-evenly;
 }
@@ -25,7 +24,6 @@ body {
 }
 .buttons {
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-around;
 }
@@ -49,12 +47,10 @@ body {
 }
 .categories {
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-around;
   background-color: aliceblue;
   box-shadow: 0 1px 1px 0 rgb(0 0 0 / 16%);
-  padding-bottom: 1rem;
   padding: 1rem 4rem 1rem 4rem;
 }
 .category {
@@ -66,7 +62,6 @@ body {
 .ad {
   margin-top: 1rem;
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
 }
@@ -77,14 +72,12 @@ body {
 .dotd-header,
 .header {
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-between;
   padding-left: 1rem;
 }
 .heading {
   display: flex;
-  flex-direction: row;
   align-items: center;
 }
 .btn-view {
@@ -97,7 +90,6 @@ body {
 .dotd-items,
 .items {
   display: flex;
-  flex-direction: row;
   text-align: center;
   align-items: center;
   justify-content: space-around;
@@ -131,4 +123,21 @@ body {
   color: grey;
   font-size: 12px;
   padding-top: 0.3rem;
+}
+@media screen and (max-width: 829px) {
+  .navbar {
+    height: 9rem;
+    min-width: fit-content;
+    flex-wrap: wrap;
+  }
+  .categories {
+    flex-wrap: wrap;
+  }
+  .dotd-items,
+  .items {
+    flex-wrap: wrap;
+  }
+  .new-ad {
+    display: none;
+  }
 }
